<resources>
    <string name="Priv">Private</string>
    <string name="Baazar">Please install the app Bazaar</string>
    <string name="OpenAndClose">Please exit the application once and then open the app</string>
    <string name="OtherFacilities">Other Facilities</string>
    <string name="use_cat">false</string>
    <string name="LimitedAccees">Access to this area is limited.</string>
    <string name="EnterPassword">Enter Password</string>
    <string name="chann">Channels</string>
    <string name="grou1">Groups</string>
    <string name="grou2">Super Groups</string>
    <string name="securitylist">Security Lists</string>
    <string name="roba">Bots</string>
    <string name="favo">Favorites</string>
    <string name="unr">Unread</string>
    <string name="all">All</string>
    <string name="set_lock">set lock</string>
    <string name="locked">locked</string>
    <string name="open_locked">You want to disable the lock?</string>
    <string name="open_yes">yes</string>
    <string name="open_no">no</string>
    <string name="no_pass">Do not set password</string>
    <string name="please_enter_your_pass">Please enter your password</string>
    <string name="password_wrong_o">The password is wrong</string>
    <string name="user_finder_ok">Username is available</string>
    <string name="user_finder_no">Username not found</string>
    <string name="helep_o">Help</string>
    <string name="your_id">Please enter your username in the field at the bottom</string>
    <string name="your_id_ed">Please enter your name</string>
    <string name="user_not_found">User not found</string>
    <string name="idfinder">Username finder</string>
    <string name="idfinder_helep">With this feature you enter the ID of the above, you can search for it</string>
    <string name="name_ch">Name</string>
    <string name="ghostmode">Ghost Mode</string>
    <string name="channellus">Fix Reports</string>
    <string name="aboutmee">About</string>
    <string name="autoanserr">Secretary</string>
    <string name="beautifulwrite">Beautiful Write</string>
    <string name="telegramsetting">Telegram Setting</string>
    <string name="personalsetting">Personal settings</string>
    <string name="profilemaker">Profile Maker</string>
    <string name="alldialogs">All</string>
    <string name="locking">Locking</string>
    <string name="SeeAll">See possibilities parsigram</string>
    <string name="voicechanger">Voice Changer</string>
    <string name="idfinder_b">Id Finder</string>
    <string name="supergrpuptitle">Super Group</string>
    <string name="themeandfont">Theme and Font</string>
    <string name="creategroupand">Create Group and ...</string>
    <string name="otherprogram">Other programs</string>
    <string name="deactivatean">Deactivate</string>
    <string name="activatean">Activate</string>
    <string name="helpanswering">If this condition is to enable every user to intelligently respond to the message you send is, you can edit your call.</string>
    <string name="helperr">Help</string>
    <string name="txtanswering">Now I am not able to answer my call later :)</string>
    <string name="answringstate">: State</string>
    <string name="AnsweringmachineDefaulttext">Now I can not answer messages I am a telegram clerk</string>
    <string name="VersionMeCoustom">Version : 1.0</string>
    <string name="ProgramerDesigner">Program designer: telegrami</string>
    <string name="CopyRightMe">telegrami All rights reserved.</string>
    <string name="MeSite">Web: www.parsine.com</string>
    <string name="MeEmaile">email:   telegram8600@gmail.com</string>
    <string name="MeTheme">Themes</string>
    <string name="MeFonts">Domestic font</string>
    <string name="MeFontsDialogs">Change Font</string>
    <string name="NotStable">not suitable</string>
    <string name="MeColors">Colors</string>
    <string name="Typeinhiding">Type in hiding</string>
    <string name="ChooseEmail">Send mail...</string>
    <string name="ChooseEmailNo">There are no email clients installed.</string>
    <string name="NiceSpace">Nice Space</string>
    <string name="NiceSpaceHelp">With this feature you can send your sentences with a greater sense</string>
    <string name="Typeinhidinghelp">With this feature, users are not see typing you state.</string>
    <string name="ShamsiClender">Shamsi Calendar</string>
    <string name="ShamsiClenderhelp">Using this feature solar calendar rather than the Gregorian calendar will see the message.</string>
    <string name="FontSample01">Font sample 1</string>
    <string name="FontSample02">Font sample 2</string>
    <string name="FontSample03">Font sample 3</string>
    <string name="FontSample04">Font sample 4</string>
    <string name="FontSample05">Font sample 5</string>
    <string name="FontSample06">Font sample 6</string>
    <string name="FontSample07">Font sample 7</string>
    <string name="FontSample08">Font sample 8</string>
    <string name="FontSample09">Font sample 9</string>
    <string name="FontSampleDefault">Default Font</string>
    <string name="AutomaticallyAdd">Automatically add the channel</string>
    <string name="AutomaticallyAddDes">To get the latest news and features new art telegram we automatically add you to channel , you can disable it</string>
    <string name="HelpProfile">In this section, you can create stunning profile name.</string>
    <string name="ShowGHostNoti">Show Notification</string>
    <string name="Ghosth">In Ghost mode you are online but offline mode seen, can also read your messages without the other party on the phone to read (two tick) in it.</string>
    <string name="Automatemakeprofilename">Automate make profile name</string>
    <string name="MakeManual">Make Manual</string>
    <string name="ModeWrite1">Mode 1</string>
    <string name="ModeWrite2">Mode 2</string>
    <string name="ModeWrite3">Mode 3</string>
    <string name="ModeWrite4">Mode 4</string>
    <string name="ModeWrite5">Mode 5</string>
    <string name="ModeWrite6">Mode 6</string>
    <string name="NormalMode">Normal Mode</string>
    <string name="Settingapersonalpassword">Setting a personal password</string>
    <string name="NewPassword">New Password</string>
    <string name="repeatpassword">Repeat password</string>
    <string name="Pleaseenteryourpassword">Please enter your password</string>
    <string name="Passwordshouldbeateast5characters">Password should be at least 5 characters.</string>
    <string name="Thepasswordiswrong">The password is wrong</string>
    <string name="Saved">Saved</string>
    <string name="SetNewPassword">Set New Password</string>
    <string name="ManagementPassword">Management</string>
    <string name="Dounlock">Do you want to unlock?</string>
    <string name="unlock">Unlock</string>
    <string name="LockHelper">To lock a contact or group, hold your finger on it for several seconds, then select the lock. They also have to make any changes here.</string>
    <string name="Passworddonotmatchtogether">Password do not match together</string>
    <string name="PleaseChooseyourmode">Please Choose your mode :</string>
    <string name="voiceChangerHelp">This feature works on Android above 5, so down version becomes inactive</string>
    <string name="upAndroidFive">This feature works on phones with Android 5 above.</string>
    <string name="change_charach">Change case</string>
    <string name="last_ch">Last Name</string>
    <string name="make_name">Make name</string>
    <string name="toast_empty">Name should not be empty</string>
    <string name="toast_set_name">The name has been changed successfully!</string>
    <string name="toast_set_clipboard">The text was copied to the clipboard !</string>
    <string name="prophilemake">Create profile name</string>
    <string name="copy_name">Copy name</string>
    <string name="no_copy_name">There is nothing to copy</string>
    <string name="forwardpro">pro forward</string>
    <string name="AddToFavorites">Add to Favourites</string>
    <string name="addtosecurity">Do you want the channel to be locked?</string>
    <string name="addtosecuritygr">Do you want the SuperGroup to be locked?</string>
    <string name="addtofav">Would you like to be added to the list of favorites?</string>
    <string name="addtorem">Would you like to be removed from the list of favorites?</string>
    <string name="colors">Colors</string>
    <string name="time_ago_prefix"></string>
    <string name="time_ago_suffix">ago</string>
    <string name="time_ago_seconds">Less than a minute</string>
    <string name="time_ago_minute">one minute</string>
    <string name="time_ago_hour">one hours</string>
    <string name="time_ago_day">one today</string>
    <string name="time_ago_month">one month</string>
    <string name="time_ago_year">one year</string>
    <string name="GhostModeInfo">In the ghost mode of someone not aware of your online status</string>
    <plurals name="time_ago_minutes">
        <item quantity="one">minute %d</item>
        <item quantity="other">minute %d</item>
    </plurals>
    <plurals name="time_ago_hours">
        <item quantity="one">hours %d</item>
        <item quantity="other">hours %d</item>
    </plurals>
    <plurals name="time_ago_days">
        <item quantity="one">today %d</item>
        <item quantity="other">today %d</item>
    </plurals>
    <plurals name="time_ago_months">
        <item quantity="one">month %d</item>
        <item quantity="other">month %d</item>
    </plurals>
    <plurals name="time_ago_years">
        <item quantity="one">year %d</item>
        <item quantity="other">year %d</item>
    </plurals>
    <string name="buyoffer01">- Full access to settings</string>
    <string name="buyoffer02">- Disable Restrictions Beautiful writing</string>
    <string name="buyoffer03">- Disable Restrictions Voice Changer</string>
    <string name="buyoffer04">- Disable Restrictions Locking</string>
    <string name="buyoffer05">- Disable Restrictions Themes</string>
    <string name="buyoffer06">- Disable Restrictions Secretary-Telegram</string>
    <string name="buyoffer07">- Disable Restrictions Profile Maker</string>
    <string name="buyoffer08">- online support</string>
    <string name="buybtn">Buy Now</string>
    <string name="BuyConnectToInternet">Connect your device to the Internet.</string>
    <string name="PremiumText">To use this special feature please upgrade to premium version</string>
    <string name="PremiumVersion">Premium Version</string>
    <string name="toshop">Go to shop</string>
    <string name="SelectThisThem">Select Theme</string>
    <string name="ok">Ok</string>
    <string name="JustChannelAndBot">The free version only robot and channels are lockable...</string>
    <string name="MySave">My Space</string>
    <string name="buyWaite">Please wait a moment ...</string>
    <string name="buyPremium">Upgrade to Premium</string>
    <string name="BuyWarning">Your payment will not be approved!</string>
    <string name="BuyChicking">In Checking purchase status ...</string>
    <string name="BuyUnsuccessful">Unsuccessful purchase</string>
    <string name="BuyInstallBazaar">Please install the Bazaar on their device!</string>
    <string name="BuyWarningErrorFromServer">Error communicating with the server !! ... Please try again.</string>
    <string name="AppName">تلگرام همه کاره</string>
    <string name="AppNameBeta">Art Telegram Beta</string>
    <string name="LanguageName">English</string>
    <string name="LanguageNameInEnglish">English</string>
    <string name="LanguageCode">en</string>
    <string name="RemoveFromFavorites">Remove From Favorites</string>
    <string name="YourPhone">Your phone</string>
    <string name="StartText">Please confirm your country code and enter your phone number.</string>
    <string name="ChooseCountry">Choose a country</string>
    <string name="WrongCountry">Wrong country code</string>
    <string name="YourCode">Phone verification</string>
</resources>