<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout40"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:text="@string/VersionMeCoustom"
            android:textColor="#414141"
            android:id="@+id/textView17"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:text="@string/ProgramerDesigner"
            android:id="@+id/textView19"
            android:textColor="#414141"
            android:layout_gravity="center_horizontal" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14dp"

            android:text="@string/CopyRightMe"
            android:id="@+id/textView20"
            android:textColor="#414141"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:text="@string/MeSite"
            android:id="@+id/textView22"
            android:autoLink="web"
            android:visibility="gone"

            android:textColor="#414141"
            android:textColorLink="#5b80df"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:text="@string/MeEmaile"
            android:id="@+id/textView21"
            android:autoLink="email"
            android:textColor="#414141"

            android:textColorLink="#5b80df"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:text="2013-2016 ©"
            android:id="@+id/textView23"
            android:textColor="#ffffff"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp" />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView5"
        android:src="@drawable/about_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

</RelativeLayout>
